getting rid of all teh weird gaps & fixin a lil styling

--- a/app/assets/stylesheets/components/page-module.css.scss
+++ b/app/assets/stylesheets/components/page-module.css.scss
@@ -1,6 +1,7 @@
 .page-module {
   display: flex;
   justify-content: center;
+  box-sizing: border-box;
   .wraper {
     display: flex;
     justify-content: center;
