--- a/app/assets/stylesheets/custom/about-us.css.scss
+++ b/app/assets/stylesheets/custom/about-us.css.scss
@@ -1,17 +1,7 @@
 .about {
-    margin-top: -100px;
-    padding: 50px 20px 100px 20px;
     text-indent: 30px;
     background-color: white;
-    @include flex-box-column;
 
-    div {max-width: 800px;}
     h1 {color: $blue2}
     a {font-weight: 700;}
 }
-
-
-
-
-
-
