--- a/app/assets/stylesheets/custom/image-carousel.css.scss
+++ b/app/assets/stylesheets/custom/image-carousel.css.scss
@@ -1,9 +1,12 @@
+.slick-slider {
+  margin-bottom: 0px !important;
+}
 .image-carousel {
     /*put background image bc of weird flashing :(*/
     background-image: image-url("Vphoto-1");
     background-size: cover;
     width: 80%;
-    display: block;
+
     div {
         background-size: cover;
         height: 600px;
