--- a/app/assets/stylesheets/custom/our-services.css.scss
+++ b/app/assets/stylesheets/custom/our-services.css.scss
@@ -1,13 +1,11 @@
 .services {
 	@include flex-box-column;
-    padding: 0px 20px 100px 20px;
     background-color: white;
 
 
 	p {text-indent: 30px;}
-	div {max-width: 800px;}
 	h1 {color: $blue1}
-	ul { 
+	ul {
         display: inline-block;
         font-weight: 700;
 	}
