--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -47,8 +47,9 @@ h1 {
     font-weight: 700;
     font-size: 30px;
     text-align: center;
-    padding-bottom: 15px;
-    padding-top: 20px;
+    padding: 30px;
+    margin: 0px;
+    line-height: 0px;
 }
 p, a, li {
     font-size: 16px;
